--- a/templates/admin/users/list.html
+++ b/templates/admin/users/list.html
@@ -1,56 +1,83 @@
 <div class="row subHeader">
-<div class="currentApp">
-  <h2 class="page-title">
-    <!-- <img class="platform_icons" height="25" width="25" src="static/img/admin_console.png"> -->
-    {{active_app.label}}
-  </h2>
-</div>
-  <div class=" subHeaderContent">
-            <div class="pull-right sharebuttonDiv"> 
-                  
-                  <!-- <button class="btn jfk-button jfk-button-action" ng-click="save(account)">
-                    <i class="fa-cog"></i>
-                  </button> -->
-            </div>
-                  <h2 class="page-title">{{ _("Users") }} </h2>
+  <div class="currentApp">
+    <h2 class="page-title">
+     <!--  <img class="platform_icons" height="25" width="25" src="static/img/admin_console.png"> -->
+      {{active_app.label}}
+    </h2>
   </div>
-</div>
- <div  class="page-content">
-    
-<div class="loader-container row" ng-show="isLoading">
-      <div class="loader-dialog col-md-4 col-md-offset-4 ">
-        <div class="loader-content">
-          Loading...
-        </div>
-      </div>
+  <div class=" subHeaderContent">
+    <div class="pull-right sharebuttonDiv" ng-show="!blankStateaccount"> 
+      
       
     </div>
-   <!-- BEGIN SAMPLE PORTLET CONFIGURATION MODAL FORM-->
-      <div id="portlet-config" class="modal">
-        <div class="modal-dialog">
-   <div class="modal-content">
-      <div class="modal-header">          
-          <button data-dismiss="modal" class="close" type="button"></button>
-          <h3>portlet Settings</h3>
+    <h2 class="page-title">{{ _("Users") }} </h2>
+  </div>
+</div>
+<div  class="page-content">
+  <div class="loader-container row" ng-show="isLoading">
+        <div class="loader-dialog col-md-4 col-md-offset-4 ">
+          <div class="loader-content">
+            Loading...
+          </div>
         </div>
-        <div class="modal-body">
-          <p>Here will be a configuration form</p>
-        </div>
-        </div>
-        </div>
+        
+  </div>
+  <div ng-show="immediateFailed">
+    <div class="col-md-12">  
+      <h1>{{ _("Sign-in Button;") }}</h1>
+      <span id="signin">
+        <span id="myGsignin"></span>
+      </span>
+    </div>
+  </div>
+  <div class="row" ng-show="isSignedIn">
+    <div class="col-md-9">
+      <button  ng-click="showModal()" id="sample_editable_1_new" class="btn red newBtn">
+        {{ _("New User") }} 
+      </button>
+    </div>
+    <div class="col-md-9">
+     <div class="row">
+      <div class="tab-pane">
+      <div class="row">
+        <div class="col-md-12 waterfall" ng-hide="blankStateaccount">
+          <div ng-repeat="user in users" ng-class="{rightcards: getPosition($index)==4}" droppable data-column="<%=getPosition($index)%>" id="card_<%=$index%>"class="cardElement" ng-drop="dropTag(contact,$index)">
+            <div class="detailsSection">
+              <div class="head">
+                <div class="pic">
+                  <a href="<%= user.google_public_profile_url %>" class="startup-link" title="user.google_display_name">
+                    <img ng-show="user.google_public_profile_photo_url" class="google-avatar" ng-src="<%= user.google_public_profile_photo_url %>">
+                  </a>
+                </div>
+                <div class="text">
+                  <div class="name">
+                    <a href="<%= user.google_public_profile_url %>" class="profile-link">
+                       <%= user.google_display_name %>
+                    </a>
+                  </div>
+                  <div class="pitch">
+                    <span>
+                      <%= user.email %>
+                    </span>
+                    <br>
+                    <span>
+                      status: <%= user.status %>
+                    </span>
+
+                    
+                  </div>
+                </div>
+                <div class="clearfix"></div>
+              </div>
+            </div>
+          </div>
+          <div class="clearfix"></div>
+        </div><!--innercardcontaine-->
       </div>
-      <!-- END SAMPLE PORTLET CONFIGURATION MODAL FORM-->
-      <!-- BEGIN PAGE CONTAINER-->
-      <div class=""ng-show="immediateFailed">
-         <div class="col-md-12">  
-          <h1>Sign-in Button;</h1>
-              <span id="signin">
-                  <span id="myGsignin"></span>
-              </span>
-        </div>
-      </div>
-      
-      <div id="addAccountModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    </div>
+    </div>
+  </div>
+<div id="addAccountModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
               <div class="modal-dialog">
    <div class="modal-content">
       <div class="modal-header">          
@@ -83,79 +110,32 @@
               </div>
               </div>
        </div>
-      <div class="" ng-show="isSignedIn">
-        
-        <!-- END PAGE HEADER-->
-        <!-- BEGIN PAGE CONTENT-->
-        <div class="row">
-          
-          <div class="col-md-12">
-            
-            
-            <div class="btn-group">
-            
-                    <button  ng-click="showModal()" id="sample_editable_1_new" class="btn red">
-                    {{ _("New User") }} <i class="icon-plus"></i>
-                    </button>
-            </div>
-               
-            <hr/>
-            
-          </div>
-        </div>
-
-
-            
-            <div class="row cards-container">
-            <div class="col-md-12">
-            <div class="inner-cards-container">
-            
-              <div ng-repeat="user in users" class="col-md-3 responsive" data-tablet="span6" data-desktop="span3">
-                <div class="dashboard-stat cards-small">
-                  
-                  <div class="details">
-                    <div class="inner-small-card">
-                    
-                    <center><a href="<%=user.google_public_profile_url%>" target="_blank"><img ng-show="user.google_public_profile_photo_url" class="google-avatar" ng-src="<%= user.google_public_profile_photo_url %>"></a></center>
-                    <p class="card-small-title" ng-show="user.google_display_name">
-                      <%= user.google_display_name %>
-                    </p>
-                    <p class="card-small-title" ng-hide="user.google_display_name">
-                      <%= user.email %>
-                    </p>
-                  
-                  </div>
-                    <div class="desc bottom">                           
-                      
-                    status:<%= user.status %>
-                    </div>
-                  </div>
-                                  
-                </div>
-              </div>
-               <div class="clearfix"></div>
-              </div>
-              </div>
-            </div>
-          <div class="row">
-            <div class="pagination pull-right" ng-hide="isLoading">
-                  
-                  <ul>
-                    <li ng-show="pagination.prev"><button ng-click="listPrevPageItems()" id="sample_editable_1_new" class="btn">
-                    {{_("Prev")}} 
-                    </button></li>
-                    <li ng-repeat="page in pagination.pages" ng-class='{active: page.isCurrent}'><a  href="#/accounts/p/<%= page.id %>"><%= page.id %></a></li>
-                    <li  ng-show="pagination.next"><button ng-click="listNextPageItems()"  class="btn">
-                    {{_("Next")}} 
-                    </button></li>
-                  </ul>
-                </div>
-                
-          </div>
-            
-          
-        
-        <!-- END PAGE CONTENT-->
-      </div>
-      <!-- END PAGE CONTAINER--> 
-</div>
+<script type="text/javascript">
+ $('#slimtest1').slimScroll({
+                    height: '20px'
+  });
+  $("#select2_sample2").select2({
+        placeholder: "Click to Select a label",
+        allowClear: false
+  });
+  var handleUniform = function () {
+        if (!jQuery().uniform) {
+            return;
+        }
+        var test = $("input[type=radio]:not(.toggle, .star)");
+        if (test.size() > 0) {
+            test.each(function () {
+                if ($(this).parents(".checker").size() == 0) {
+                    $(this).show();
+                    $(this).uniform();
+                }
+            });
+        }
+    }
+    handleUniform();
+   $('.waterfall').waterfall({ 
+        colMinWidth: 210, 
+        defaultContainerWidth: 800,
+        autoresize: true
+  });
+</script>
