--- a/templates/admin/groups/list.html
+++ b/templates/admin/groups/list.html
@@ -1,42 +1,76 @@
-
-
-<div class="page-sidebar nav-collapse collapse">
-      <!-- BEGIN SIDEBAR MENU -->        
-        <ul class="page-sidebar-menu">
-        
-        {% for tab in tabs %}
-           <li id="id_{{tab.name}}"  ><a href="{{tab.url}}"><i class="icon-cogs"></i><span class="title">{{tab.label}}</span></a></li>
-          {% endfor %}
-        </ul>
-     
-     
-      <!-- END SIDEBAR MENU -->
+<div class="row subHeader">
+  <div class="currentApp">
+    <h2 class="page-title">
+     <!--  <img class="platform_icons" height="25" width="25" src="static/img/admin_console.png"> -->
+      {{active_app.label}}
+    </h2>
+  </div>
+  <div class=" subHeaderContent">
+    <div class="pull-right sharebuttonDiv" ng-show="!blankStateaccount"> 
+      
+      
+    </div>
+    <h2 class="page-title">{{ _("Groups") }} </h2>
+  </div>
 </div>
-    
 <div  class="page-content">
-    
+  <div class="loader-container row" ng-show="isLoading">
+        <div class="loader-dialog col-md-4 col-md-offset-4 ">
+          <div class="loader-content">
+            Loading...
+          </div>
+        </div>
+        
+  </div>
+  <div ng-show="immediateFailed">
+    <div class="col-md-12">  
+      <h1>{{ _("Sign-in Button;") }}</h1>
+      <span id="signin">
+        <span id="myGsignin"></span>
+      </span>
+    </div>
+  </div>
+  <div class="row" ng-show="isSignedIn">
+    <div class="col-md-9">
+      <button  ng-click="showModal()" id="sample_editable_1_new" class="btn red newBtn">
+        {{ _("New Group") }} 
+      </button>
+    </div>
+    <div class="col-md-9">
+     <div class="row">
+      <div class="tab-pane">
+      <div class="row">
+        <div class="col-md-12 waterfall" ng-hide="blankStateaccount">
+          <div ng-repeat="group in groups" ng-class="{rightcards: getPosition($index)==4}" droppable data-column="<%=getPosition($index)%>" id="card_<%=$index%>"class="cardElement" ng-drop="dropTag(contact,$index)">
+            <div class="detailsSection">
+              <div class="head">
+                <!-- <div class="pic">
+                  <a href="<%= user.google_public_profile_url %>" class="startup-link" title="user.google_display_name">
+                    <img ng-show="user.google_public_profile_photo_url" class="google-avatar" ng-src="<%= user.google_public_profile_photo_url %>">
+                  </a>
+                </div> -->
+                <div class="text">
+                  <div class="name">
+                    <a href="/#/admin/groups/show/<%= group.id %>" class="profile-link">
+                       <%= group.name %>
+                    </a>
+                  </div>
+                  <div class="pitch">
 
-   <!-- BEGIN SAMPLE PORTLET CONFIGURATION MODAL FORM-->
-      <div id="portlet-config" class="modal hide">
-        <div class="modal-header">
-          <button data-dismiss="modal" class="close" type="button"></button>
-          <h3>portlet Settings</h3>
-        </div>
-        <div class="modal-body">
-          <p>Here will be a configuration form</p>
-        </div>
+                    
+                  </div>
+                </div>
+                <div class="clearfix"></div>
+              </div>
+            </div>
+          </div>
+          <div class="clearfix"></div>
+        </div><!--innercardcontaine-->
       </div>
-      <!-- END SAMPLE PORTLET CONFIGURATION MODAL FORM-->
-      <!-- BEGIN PAGE CONTAINER-->
-      <div class="container-fluid" ng-show="immediateFailed">
-         <div class="span12">  
-          <h1>Sign-in Button;</h1>
-              <span id="signin">
-                  <span id="myGsignin"></span>
-              </span>
-        </div>
-      </div>
-      <div id="addGroupModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    </div>
+    </div>
+  </div>
+<div id="addGroupModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
          <div class="modal-dialog">
          <div class="modal-content">
               <div class="modal-header">
@@ -45,7 +79,7 @@
                         <h3 id="myModalLabel">{{_("New Group")}}</h3>
               </div>
               <div class="modal-body">
-                 <form id="addAccount" name="addaccount" ng-submit="addGroup(group)" class="form-horizontal"> 
+                 <form id="addAccount" name="addaccount"  class="form-horizontal"> 
                   <fieldset>
                   
                    
@@ -63,78 +97,39 @@
               </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                <button  type="submit" class="btn green addContactNow">{{_("Add this group")}}</button>
+                <button  type="submit" class="btn green addContactNow" ng-click="addGroup(group)">{{_("Add this group")}}</button>
               </div>
                </form>
         </div>
         </div>
        </div>
-      <div class="container-fluid" ng-show="isSignedIn">
-        
-        <!-- END PAGE HEADER-->
-        <!-- BEGIN PAGE CONTENT-->
-      <div class="row">  
-        <div class="col-md-12">
-            <h2>{{ _("Groups") }} </h2>
-        </div>
-      </div>
-        <div class="row">
-            <div class="col-md-12">
-            
-                    <button  ng-click="showModal()" id="sample_editable_1_new" class="btn red">
-                    {{ _("New Group") }} <i class="icon-plus"></i>
-                    </button>
-            </div>
-        </div>
-         <hr/>
-            
-            <div class="row cards-container">
-             <div class="col-md-12">
-            <div class="inner-cards-container">
-            
-              <div ng-repeat="group in groups" class="col-lg-4 col-md-3 col-sm-6 col-xs-12">
-                <div class="dashboard-stat cards-small">
-                  
-                  <div class="details">
-                    <div class="inner-small-card">
-                    <a href="/#/admin/groups/show/<%= group.id %>">
-                    
-                    <p class="card-small-title" >
-                      <%= group.name %>
-                    </p>
-                   
-                    </a>
-                  </div>
-                    
-                  </div>
-                                  
-                </div>
-              </div>
-              <div class="row">
-              <div class="col-md-12">
-            <div class="pagination pull-right" ng-hide="isLoading">
-                  
-                  <ul>
-                    <li ng-show="pagination.prev"><button ng-click="listPrevPageItems()" id="sample_editable_1_new" class="btn">
-                    {{_("Prev")}} 
-                    </button></li>
-                    <li ng-repeat="page in pagination.pages" ng-class='{active: page.isCurrent}'><a  href="#/accounts/p/<%= page.id %>"><%= page.id %></a></li>
-                    <li  ng-show="pagination.next"><button ng-click="listNextPageItems()"  class="btn">
-                    {{_("Next")}} 
-                    </button></li>
-                  </ul>
-                </div>
-                <h3 class="pagination pull-right" ng-show="isLoading">Loading...</h3>
-          </div>
-          </div>
-              </div>
-             </div> 
-            </div>
-          
-            
-          
-        
-        <!-- END PAGE CONTENT-->
-      </div>
-      <!-- END PAGE CONTAINER--> 
-</div>
+
+<script type="text/javascript">
+ $('#slimtest1').slimScroll({
+                    height: '20px'
+  });
+  $("#select2_sample2").select2({
+        placeholder: "Click to Select a label",
+        allowClear: false
+  });
+  var handleUniform = function () {
+        if (!jQuery().uniform) {
+            return;
+        }
+        var test = $("input[type=radio]:not(.toggle, .star)");
+        if (test.size() > 0) {
+            test.each(function () {
+                if ($(this).parents(".checker").size() == 0) {
+                    $(this).show();
+                    $(this).uniform();
+                }
+            });
+        }
+    }
+    handleUniform();
+   $('.waterfall').waterfall({ 
+        colMinWidth: 210, 
+        defaultContainerWidth: 800,
+        autoresize: true
+  });
+</script>
