--- a/templates/contacts/contact_new.html
+++ b/templates/contacts/contact_new.html
@@ -42,7 +42,7 @@
     </div>
   </div>
   <div class="row" >
-    <div class="showPage col-md-9">
+    <div class="showPage newPage col-md-9">
       <div class="row">
         <div class="col-md-12">
           <div class="row">
@@ -50,10 +50,10 @@
               <div class="portlet">
                 <div class="portlet-body left-sidebar" id="chats">
                   <div class="pic">
-                    <img alt="<%=contact.firstname%> <%=contact.lastname%>" ng-src="<%=imageSrc%>">
+                    <img alt="<%=contact.firstname%> <%=contact.lastname%>" ng-src="<%=imageSrc%>" class="">
                   </div>  
                   <a ng-click="createPickerUploader()" href="" class="btn btn-default btn-upload" data-toggle="modal">
-                    <img src="/static/img/upload_logo.png" >
+                    <img src="/static/img/upload_logo.png" class="" >
                   </a>
                 </div>
               </div>
