--- a/templates/leads/lead_new.html
+++ b/templates/leads/lead_new.html
@@ -34,7 +34,7 @@
     </div>
   </div>
   <div class="row" >
-    <div class="showPage col-md-9">
+    <div class="showPage newPage col-md-9">
       <div class="row">
         <div class="col-md-12">
           <div class="row">
@@ -42,7 +42,7 @@
               <div class="portlet">
                 <div class="portlet-body left-sidebar" id="chats">
                   <div class="pic">
-                    <img alt="<%=lead.firstname%> <%=lead.lastname%>" ng-src="<%=imageSrc%>">
+                    <img alt="<%=lead.firstname%> <%=lead.lastname%>" class="img-responsive img-thumbnail" ng-src="<%=imageSrc%>">
                   </div>  
                   <a ng-click="createPickerUploader()" href="" class="btn btn-default btn-upload" data-toggle="modal">
                     <img src="/static/img/upload_logo.png" >
