--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -224,25 +224,31 @@
                           <strong>Phone</strong>
                         </div>
                         <ul class="list-unstyled contact-infos">
+                          <li ng-repeat="phone in infonodes.phones"> <a editable-text="phone.number" onbeforesave="inlinePatch('Infonode','phones', 'number',phone.entityKey,$data)"> <%=phone.number%> </a> - <a editable-select="phone.type" e-ng-options="s.value as s.text for s in statuses" onbeforesave="inlinePatch('Infonode','phones', 'type',phone.entityKey,$data)"> <%=phone.type%> </a> <a ><img class="ctodeal"  /></a></li>
                           <li>
                             <a href="#phonemodal" class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i>Add a new Phone</a>
                           </li>
+                          
                         </ul>
                         <div class="news-block-tags">
                           <strong>Email</strong>
                         </div>
                         <ul class="list-unstyled contact-infos">
+                        <li ng-repeat="email in infonodes.emails"> <a editable-text="email.email" onbeforesave="inlinePatch('Infonode','emails', 'email',email.entityKey,$data)"> <%=email.email %>  </a> </li>
                           <li>
                             <a href="#emailmodal" class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i> Add a new email address </a>
                           </li>
+                          
                         </ul>
                         <div class="news-block-tags">
                           <strong>Address</strong>
                         </div>
                         <ul class="list-unstyled contact-infos">
+                           <li ng-repeat="address in infonodes.addresses">- <span editable-text="address.country" onbeforesave="inlinePatch('Infonode','addresses', 'street',address.entityKey,$data)" ng-show="address.street"><%=address.street%>, </span> <span editable-text="address.city" onbeforesave="inlinePatch('Infonode','addresses', 'city',address.entityKey,$data)" ng-show="address.city"><%=address.city%>, </span> <span editable-text="address.country" onbeforesave="inlinePatch('Infonode','addresses', 'country',address.entityKey,$data)" ng-show="address.country"><%=address.country%></span></li>
                           <li>
                             <a href="#addressmodal" class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i> Add a new address </a>
                           </li>
+
                         </ul>
                       </div>
                       <div class="news-blocks blank-card blank-card-bluep newsCard">
@@ -251,6 +257,7 @@
                           <strong>Website</strong>
                         </div>
                         <ul class="list-unstyled contact-infos">
+                          <li ng-repeat="website in infonodes.websites"><a editable-text="website.url" onbeforesave="inlinePatch('Infonode','websites', 'url',website.entityKey,$data)" href="http://<%=website.url%>"  target="_blank" ><%=website.url%></a> </li>
                           <li>
                             <a href="#websitemodal" class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i> Add a new Website </a>
                           </li>
@@ -259,6 +266,7 @@
                           <strong>Social Links</strong>
                         </div>
                         <ul class="list-unstyled contact-infos">
+                          <li ng-repeat="sociallink in infonodes.sociallinks"><a editable-text="sociallink.url" onbeforesave="inlinePatch('Infonode','sociallinks', 'url',sociallink.entityKey,$data)" href="<%=sociallink.url%>" target="_blank"> <%=sociallink.url%> </a></li>
                           <li>
                             <a href="#socialmodal" class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i> Add a new social links </a>
                           </li>
@@ -267,6 +275,11 @@
                       <div class="news-blocks blank-card blank-card-yellow newsCard">
                         <h3>Custom Fields</h3>
                         <ul class="list-unstyled contact-infos">
+                          <li ng-repeat="custom in infonodes.customfields">
+                                    <span>
+                                    <%= custom.field%>  : <%= custom.value%> </span>
+
+                          </li>
                           <li>
                             <a href="#customfields" class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i> Add a new custom field </a>
                           </li>
